[package]
name = "debra"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
clashmap = "1.2.0"
flatbuffers = "25.2.10"
futures = "0.3.31"
quinn = "0.11.7"
quinn-proto = "0.11.10"
rcgen = "0.13.2"
rustls = { version = "0.23.25", features = ["ring"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
